chore: update time semantic, dump collapse-header to after to work with matuschak, and correct height for collapsed in matuschak mode

--- a/quartz/components/styles/matuschak.scss
+++ b/quartz/components/styles/matuschak.scss
@@ -85,21 +85,6 @@ body.stack-mode {
   .breadcrumb-container {
     visibility: hidden;
   }
-
-  .collapsible-header {
-    & .toggle-button {
-      display: none;
-    }
-
-    .collapsible-header-content-outer {
-      padding-left: 0;
-
-      .collapsible-header-content {
-        padding-left: 0;
-        border-left-width: 0px;
-      }
-    }
-  }
 }
 
 a {
@@ -197,6 +182,8 @@ a {
         }
 
         &.collapsed {
+          height: fit-content;
+
           .stacked-content {
             opacity: 0;
           }
